Fixed more spacing issues

--- a/css/querys.css
+++ b/css/querys.css
@@ -266,7 +266,7 @@
     }
 
     .experience__img {
-        width: 20rem;
+        width: 19rem;
         margin: 25px 25px;
         
     }
